[package]
name = "pallet-cloud-credits"
description = "Cloud credits module that allows users to buy/earn credits."
repository = "https://github.com/tangle-network/tangle"
license = "Apache-2.0"
version = "1.0.0"
authors = ["Tangle Developers <hello@tangle.tools>"]
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
ethabi = { workspace = true }

pallet-session = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
pallet-multi-asset-delegation = { workspace = true }
pallet-staking = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-utility = { workspace = true }

sp-arithmetic = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
tangle-primitives = { workspace = true }

[dev-dependencies]
ethereum = { workspace = true, features = ["with-codec"] }
hex = { workspace = true }
num_enum = { workspace = true }
hex-literal = { workspace = true }
libsecp256k1 = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
sp-io = { workspace = true }

# Frontier Primitive
fp-account = { workspace = true }
fp-consensus = { workspace = true }
fp-dynamic-fee = { workspace = true }
fp-ethereum = { workspace = true }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true }
fp-storage = { workspace = true }

# Frontier FRAME
pallet-base-fee = { workspace = true }
pallet-dynamic-fee = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }

pallet-evm-precompile-blake2 = { workspace = true }
pallet-evm-precompile-bn128 = { workspace = true }
pallet-evm-precompile-curve25519 = { workspace = true }
pallet-evm-precompile-ed25519 = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }

pallet-evm-precompile-balances-erc20 = { workspace = true }
pallet-evm-precompileset-assets-erc20 = { workspace = true }

precompile-utils = { workspace = true }
tangle-crypto-primitives = { workspace = true }
sp-core = { workspace = true }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
pallet-multi-asset-delegation = { workspace = true }
sp-staking = { workspace = true }
sp-weights = { workspace = true }
frame-election-provider-support = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "tangle-primitives/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "pallet-multi-asset-delegation/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-timestamp/std",
    "pallet-utility/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "sp-runtime/try-runtime"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
