[package]
name = "pallet-dkg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_with = { workspace = true, default-features = false, features = ["macros"] }
serdect = { workspace = true, features = ["alloc"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
subtle = { workspace = true }
tangle-crypto-primitives = { workspace = true, default-features = false }
tangle-primitives = { workspace = true, default-features = false }
rand_core = { workspace = true, default-features = false }
rand_chacha = { workspace = true, default-features = false }

# Pallets
pallet-jobs = { workspace = true }

# dfns/CGGMP21 specific dependencies
malachite-base = { workspace = true, default-features = false }
malachite-nz = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false, features = ["serde"] }
postcard = { workspace = true, default-features = false }
sha2 = { workspace = true, default-features = false }
digest = { workspace = true, default-features = false }
udigest = { workspace = true, features = ["derive"] }
generic-ec = { workspace = true, default-features = false, features = ["serde", "udigest", "curve-secp256k1", "curve-secp256r1", "curve-stark"] }
generic-ec-zkp = { workspace = true, default-features = false, features = ["serde", "udigest", "alloc"] }
starknet-crypto = { workspace = true, default-features = false }
k256 = { workspace = true, default-features = false, features = ["hash2curve", "alloc", "ecdsa"] }
p256 = { workspace = true, default-features = false, features = ["hash2curve", "alloc", "ecdsa"] }
slip-10 = { version = "0.2", default-features = false, features = ["all-curves"] }
ecdsa-core = { workspace = true, default-features = false  }
generic-array = { version = "0.14.7", default-features = false }
derivation-path = { workspace = true, default-features = false }

# FROST specific dependencies
frost-core = { workspace = true, default-features = false }
frost-ed25519 = { workspace = true, default-features = false }
elliptic-curve = { version = "0.13", features = ["hash2curve"], default-features = false }
frost-ed448 = { workspace = true, default-features = false }
frost-ristretto255 = { workspace = true, default-features = false }
frost-secp256k1 = { workspace = true, default-features = false }
frost-taproot = { workspace = true, default-features = false }
frost-p256 = { workspace = true, default-features = false }
frost-p384 = { workspace = true, default-features = false }
snowbridge-milagro-bls = { workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
postcard = { workspace = true, default-features = false, features = ["alloc"] }
smallvec = { workspace = true }
sp-keystore = { workspace = true }
dfns-cggmp21 = { workspace = true, default-features = false, features = ["curve-secp256k1", "curve-secp256r1", "curve-stark"] }
round-based = { workspace = true, features = ["derive"] }
paillier-zk = { workspace = true, features = ["serde"] }
rand_core = { workspace = true }
frost-core = { workspace = true }
paste = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "tangle-primitives/std",
    "tangle-crypto-primitives/std",
    "pallet-balances/std",
    "sp-io/std",
    "sp-keystore/std",
    "pallet-jobs/std",

    "frost-core/std",
    "frost-ed25519/std",
    "elliptic-curve/std",
    "frost-ed448/std",
    "frost-ristretto255/std",
    "frost-secp256k1/std",
    "frost-taproot/std",
    "frost-p256/std",
    "frost-p384/std",
    # "frost-redjubjub/std",
    "snowbridge-milagro-bls/std",
    "starknet-crypto/std",
]
serde = []
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
]
