[package]
name = "pallet-jobs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
tangle-primitives = {workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
smallvec = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = ["scale-info/std", "sp-runtime/std", "frame-support/std", "frame-system/std", "sp-core/std", "sp-std/std", "tangle-primitives/std", "pallet-balances/std"]
try-runtime = ["frame-support/try-runtime"]
