[package]
name = "pallet-multi-asset-delegation"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
ethabi = { workspace = true }
pallet-balances = { workspace = true }
tangle-primitives = { workspace = true }
pallet-assets = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
  "scale-info/std",
  "sp-runtime/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "sp-std/std",
  "pallet-balances/std",
  "pallet-assets/std",
  "tangle-primitives/std",
  "ethabi/std",
  "log/std"
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
]
