[package]
name = "pallet-parachain-staking"
description = "parachain staking pallet for collator selection and reward distribution"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
log = { workspace = true }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
substrate-fixed = { workspace = true }

# Nimbus
nimbus-primitives = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
similar-asserts = "1.1.0"
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "nimbus-primitives/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "serde",
  "sp-runtime/std",
  "sp-std/std",
  "sp-staking/std",
  "pallet-session/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
