[package]
name = "pallet-restaking-delegation"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
pallet-evm = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
rustc-hex = { workspace = true }
scale-info = { workspace = true }
schnorrkel = { workspace = true }
serde = { workspace = true, features = ["alloc"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-vesting = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
substrate-fixed = { workspace = true }
tangle-crypto-primitives = { workspace = true, default-features = false }
tangle-primitives = { workspace = true, default-features = false }

[dev-dependencies]
hex-literal = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
similar-asserts = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["std"]
std = [
  "log/std",
  "serde/std",
  "rustc-hex/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "pallet-vesting/std",
  "pallet-balances/std",
  "pallet-evm/std",
  "schnorrkel/std",
  "tangle-primitives/std",
  "tangle-crypto-primitives/std",
]

try-runtime = ["frame-support/try-runtime"]

runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-vesting/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  ]
