[package]
name = "pallet-roles"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true }
serde = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-staking = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
tangle-primitives = {workspace = true, default-features = false }
frame-benchmarking = { workspace = true, optional = true }
frame-election-provider-support = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["std"]
std = [
  "log/std",
  "serde/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "sp-staking/std",
  "pallet-balances/std",
  "pallet-staking/std",
  "pallet-session/std",
  "pallet-timestamp/std",
  "tangle-primitives/std",
  "frame-election-provider-support/std",
]

try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "sp-staking/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-staking/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "frame-election-provider-support/runtime-benchmarks",
]
